--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Issuer": "MyWebApi",
+    "Audience": "MyWebApi",
+    "Key": "This is a sample secret key key key key.'"
+  }
 }
