--- a/appsettings.json
+++ b/appsettings.json
@@ -10,5 +10,27 @@
     "Issuer": "MyWebApi",
     "Audience": "MyWebApi",
     "Key": "This is a sample secret key key key key.'"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;port=3306;database=AWIWebApiDB;uid=root;password=root"
+  },
+  "HealthChecksUI": {
+    "HealthChecks": [
+      {
+        "Name": "ServiceHealthCheck",
+        "Uri": "/service-health"
+      },
+      {
+        "Name": "DBHealthCheck",
+        "Uri": "/res-health"
+      },
+      {
+        "Name": "ResHealthCheck",
+        "Uri": "/db-health"
+      }
+    ],
+    "Webhooks": [],
+    "EvaluationTimeInSeconds": 10,
+    "MinimumSecondsBetweenFailureNotifications": 60
   }
 }
