--- a/appsettings.json
+++ b/appsettings.json
@@ -32,5 +32,9 @@
     "Webhooks": [],
     "EvaluationTimeInSeconds": 10,
     "MinimumSecondsBetweenFailureNotifications": 60
+  },
+  "CurrencyBeacon": {
+    "ApiKey": "WBpf2ZQu5lCuuiMmnyRa0PLYBwIOuiB9",
+    "BaseUrl": "https://api.currencybeacon.com/v1/latest"
   }
 }
