--- a/appsettings.json
+++ b/appsettings.json
@@ -3,6 +3,12 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "File": {
+      "Path": "Logs/log.txt",
+      "LogLevel": {
+        "Default": "Information"
+      }
     }
   },
   "AllowedHosts": "*",
@@ -12,7 +18,7 @@
     "Key": "This is a sample secret key key key key.'"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;database=AWIWebApiDB;uid=root;password=root"
+    "DefaultConnection": "Server=WIN-GAMKSLEAFMK;Database=EmailListenerDB;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "HealthChecksUI": {
     "HealthChecks": [
@@ -36,5 +42,13 @@
   "CurrencyBeacon": {
     "ApiKey": "WBpf2ZQu5lCuuiMmnyRa0PLYBwIOuiB9",
     "BaseUrl": "https://api.currencybeacon.com/v1/latest"
+  },
+  "SendGrid": {
+    "ApiKey": "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",
+    "FromEmail": "trunovivan641@gmail.com",
+    "ToEmail": "imaf96164@gmail.com"
+  },
+  "OpenWeather": {
+    "ApiKey": "c73baa64e2e483044250daf54c4b826d"
   }
 }
