Revert "lab done"
This reverts commit 3cdca69eaf6fc39cda877404b46fa4569b135618.

--- a/appsettings.json
+++ b/appsettings.json
@@ -3,12 +3,6 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    },
-    "File": {
-      "Path": "Logs/log.txt",
-      "LogLevel": {
-        "Default": "Information"
-      }
     }
   },
   "AllowedHosts": "*",
@@ -18,7 +12,7 @@
     "Key": "This is a sample secret key key key key.'"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=WIN-GAMKSLEAFMK;Database=EmailListenerDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "server=localhost;port=3306;database=AWIWebApiDB;uid=root;password=root"
   },
   "HealthChecksUI": {
     "HealthChecks": [
@@ -42,13 +36,5 @@
   "CurrencyBeacon": {
     "ApiKey": "WBpf2ZQu5lCuuiMmnyRa0PLYBwIOuiB9",
     "BaseUrl": "https://api.currencybeacon.com/v1/latest"
-  },
-  "SendGrid": {
-    "ApiKey": "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",
-    "FromEmail": "trunovivan641@gmail.com",
-    "ToEmail": "imaf96164@gmail.com"
-  },
-  "OpenWeather": {
-    "ApiKey": "c73baa64e2e483044250daf54c4b826d"
   }
 }
