--- a/appsettings.json
+++ b/appsettings.json
@@ -18,7 +18,7 @@
     "Key": "This is a sample secret key key key key.'"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=WIN-GAMKSLEAFMK;Database=EmailListenerDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=127.0.0.1,1433;Database=EmailListenerDB;User Id=sa;Password=Strinffd7122!vkvd;TrustServerCertificate=True;"
   },
   "HealthChecksUI": {
     "HealthChecks": [
